kubernetes/apps/lubelogger/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: lubelogger
  namespace: apps
spec:
  entryPoints: [websecure]
  routes:
  - match: Host(`cars.woitzik.dev`)
    kind: Rule
    middlewares: [{name: crowdsec-bouncer}, {name: authelia}]
    services: [{name: lubelogger, port: 80}]
